# wych-project

./: .gitignore  README.md
android-project/: settings.gradle  tes_android
android-project-lib/: settings.gradle
android-project-lib/app/: build.gradle
android-project-lib/gradle/wrapper/: gradle-wrapper.properties
android-project/app/: build.gradle
android-project/framework/infrastructure/: build.gradle
android-project/gradle/wrapper/: gradle-wrapper.properties
arduino-project/arduino-uno/src/: main.cpp
arduino-project/esp-8266/: platformio.ini
arduino-project/esp-8266/data/: index.html
arduino-project/esp-8266/examples/: led.cpp  main.cpp
arduino-project/esp-8266/src/: main.cpp  test.cpp
arduino-project/esp8266/: platformio.ini
arduino-project/esp8266/src/: main.cpp
c-project-cmake/: CMakeLists.txt
c-project-cmake/c-project-cmake/: CMakeLists.txt  VulkanExampleBase.cpp  VulkanExampleBase.h  VulkanglTFScene.cpp  VulkanglTFScene.h  c-project-cmake.cpp  c-project-cmake.h  readme
c-project-cmake/c-project-cmake/backup/: VulkanglTFScene.cpp  VulkanglTFScene.h
c-project-cmake/c-project-cmake/base/: CMakeLists.txt  TextOverlay.hpp  VulkanDebug.cpp  VulkanDevice.cpp  VulkanSwapChain.cpp  VulkanTexture.cpp  VulkanTexture.h  VulkanTools.cpp  VulkanUIOverlay.cpp  VulkanUIOverlay.h  VulkanglTFModel.cpp  VulkanglTFModel.h  camera.hpp
c-project-cmake/c-project-cmake/data/shaders/glsl/gltfscenerendering/: scene-nolight.frag  scene-nolight.frag.spv  scene.frag  scene.frag.spv
c-project-cmake/c-project-cmake/data/shaders/glsl/new/: normal.vert  normal.vert.spv  normaldebug.geom  normaldebug.geom.spv
c-project/formula/: HelloWorld.cpp
c-project/opencv-sourec-test/: opencv-sourec-test.sln
c-project/opencv-sourec-test/opencv-sourec-test/: jpg-test.cpp  opencv-sourec-test.cpp  opencv-sourec-test.vcxproj  opencv-sourec-test.vcxproj.filters
python-project/script-game-android/: al_script.py  al_script_gui.py  al_script_gui2.py  al_script_gui_3.py  pic_test.py  pic_test2.py  pic_test3.py  readme.md  scriptConfig.py  scriptModel.py  scriptStart.py  scriptUI.py  simplePackage.py
qt-project/wych-qt-project/: wych-qt-project.pro
qt-project/wych-qt-project/libhv/: hconfig.h  hv.h  libhv.cpp  libhv.h  libhv.pro
qt-project/wych-qt-project/libuv/: libuv.pro
qt-project/wych-qt-project/project/: Itemview10Inject.h  Itemview10Script.h  form.cpp  form.h  itemview10.cpp  itemview10.h  itemview10Inject.cpp  itemview10ProcessStatus.cpp  (+55 more)
(+94 files in other folders)
